# kie_project_structure

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/kie_base/classification/: classification_executor.py  test.py
src/kie_base/extraction/: extraction_executor.py
src/kie_base/ocr/: ocr_executor.py
src/kie_base/pipeline/: single_extraction_pipeline.py
src/kie_base/preprocessing/: preprocessing.py  preprocessing_executor.py
src/kie_base/schema/: config.py  doc_type.py
src/kie_base/schema/data/: document.py
